--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ CACHE_REDIS_HOST=redis-10155.c305.ap-south-1-1.ec2.cloud.redislabs.com
 CACHE_REDIS_PORT=10155
 CACHE_REDIS_PASSWORD=X8kWly7NmJxeETDtmtsG8YZee2Bb3X1j
 
+sender_email=tanejabhumika22@gmail.com
+email_app_password=wtstbswzddbxxowh
